--- a/Aboutus.html
+++ b/Aboutus.html
@@ -93,7 +93,7 @@
             </div>
           </div>
         </div>
-        <a href="https://nicepage.com/c/sports-website-templates" class="u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-btn-round u-button-style u-hover-palette-1-base u-none u-radius-50 u-btn-1">Register</a>
+        <a href="register.html" class="u-border-2 u-border-hover-palette-1-base u-border-palette-1-base u-btn u-btn-round u-button-style u-hover-palette-1-base u-none u-radius-50 u-btn-1">Register</a>
       </div>
     </section>
     
